--- a/concourse/pipelines/templates/gpdb-tpl.yml
+++ b/concourse/pipelines/templates/gpdb-tpl.yml
@@ -868,7 +868,7 @@ jobs:
     file: gpdb_src/concourse/tasks/compile_gpdb.yml
     image: gpdb6-centos6-build
     params:
-      CONFIGURE_FLAGS: {{configure_flags}}
+      CONFIGURE_FLAGS: {{configure_flags_with_extensions}}
       TARGET_OS: centos
       TARGET_OS_VERSION: 6
       BLD_TARGETS: "clients loaders"
@@ -912,7 +912,7 @@ jobs:
     image: gpdb6-centos7-build
     file: gpdb_src/concourse/tasks/compile_gpdb.yml
     params:
-      CONFIGURE_FLAGS: {{configure_flags}}
+      CONFIGURE_FLAGS: {{configure_flags_with_extensions}}
       TARGET_OS: centos
       TARGET_OS_VERSION: 7
       BLD_TARGETS: "clients loaders"
@@ -947,7 +947,7 @@ jobs:
   - task: compile_gpdb
     file: gpdb_src/concourse/tasks/compile_gpdb_sles11.yml
     params:
-      CONFIGURE_FLAGS: {{configure_flags}}
+      CONFIGURE_FLAGS: {{configure_flags_with_extensions}}
       TARGET_OS: sles
       TARGET_OS_VERSION:
       BLD_TARGETS: "clients loaders"
